--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "bugs": {
     "url": "https://github.com/Abady321x123/simple-music/issues"
   },
+  "engines": {
+    "node": ">=10.0.0",
+    "npm": ">=6.0.0"
+  },
   "homepage": "https://github.com/Abady321x123/simple-music#readme",
   "dependencies": {
     "anti-spam": "^0.2.7",
